# acid-hdr

./: .gitignore  Cargo.toml  Makefile  PKGBUILD  README.md  acid-hdr.c  acid-hdr.service  cosmic-hdr  cosmic-hdr-settings  cosmic-hdr-settings.desktop  cosmic-hdr.c  cosmic-hdr.policy  cosmic-hdr.service  hdr-cal.py  hdr-game  kms-hdr  kms-hdr.service  sudoers.d-cosmic-hdr
core/: 99-kms-hdr-auto.rules  Makefile  PKGBUILD  kms-hdr-auto.service  kms-hdr.c  kms-hdr.policy  kms-hdr.service
crates/kms-hdr-cal/: Cargo.toml
crates/kms-hdr-cal/src/: main.rs  patterns.rs  state.rs  steps.rs
crates/kms-hdr-core/: Cargo.toml
crates/kms-hdr-core/src/: apply.rs  conf.rs  edid.rs  gpu.rs  lib.rs  profile.rs
