[workspace]
resolver = "2"
members = [
    "crates/kms-hdr-core",
    "crates/kms-hdr-cal",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/Sigmachan/kms-hdr"
authors = ["Sigmachan"]

[workspace.dependencies]
kms-hdr-core = { path = "crates/kms-hdr-core" }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
